--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
+                <span class="fa fa-star checked"></span>
 
 
                 <p class="justify-content-center align-items-center align-content-center card-text">The dish consists of a deep fried potato dumpling placed inside a bread bun sliced almost in half through the middle.&nbsp;</p>
