--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="card"></div>
     <nav class="navbar navbar-dark navbar-expand-md bg-dark">
       <img src="assets/img/logo.png" alt="Logo" style="width:80px;">
-        <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="https://www.instagram.com/gourmandjunction/">Instagram</a></li>
