--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <p class="justify-content-center align-items-center align-content-center card-text">The dish consists of a deep fried potato dumpling placed inside a bread bun sliced almost in half through the middle.&nbsp;</p>
                 <p class="card-text-price" >₹300</p>
-                <a class="btn btn-primary text-center" role="button" href="&quot;https://www.instagram.com/p/CKqfm70lzUV/?utm_source=ig_web_button_share_sheet&quot;">View Item<br></a></div>
+                <a class="btn btn-primary text-center" role="button" href="https://www.instagram.com/p/CKqfm70lzUV/?utm_source=ig_web_copy_link">View Item<br></a></div>
 
         </div>
         <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/macaroni.png" height="450">
